# soccerapi

./: .gitignore  CONTRIBUTING.md  Pipfile  README.md  conftest.py  pyproject.toml  pytest.ini  setup.py
.github/workflows/: main.yml
api/: 888sport.json  888sport.py  __init__.py
docs/: README.md  _sidebar.md  api.md  competitions.md  generate_competitions.py  index.html
soccerapi/: 888sport.json  __init__.py  __version__.py
soccerapi/api/: 888sport.json  888sport.py  __init__.py  base.py  bet365.json  bet365.py  example.py  kambi.py  unibet.py
soccerapi/api/888sport/: 888sport.py
soccerapi/api/bet365/: bet365.json  bet365.py
soccerapi/api/unibet/: unibet.py
soccerapi/test/: test_888sport.py
soccerapi/tests/: generate_urls.py  test_888sport.py  test_api.py  test_bet365.py  test_unibet.py  urls.py
test/: test_888sport.py
